--- a/www/index.html
+++ b/www/index.html
@@ -78,6 +78,8 @@
                             <a href="javascript:window.open('http://maps.apple.com/?q=13.0408454,80.2346172,13.0408454,80.23');">test ios navigation 1</a> <br><br>
                             <a href="javascript:window.open('http://maps.apple.com/?saddr=13.0851998,80.2421413&daddr=13.0408454,80.23');">test android navigation 2</a>
                              <br><br>
+                             <a href="javascript:window.open('http://maps.apple.com/maps/dir/13.0408454,80.2346172/13.0408454,80.23');">test android navigation 3</a>
+                            <br><br>
                              <a href="javascript:void(0)" id="test">test available</a>
                             
                              <br><br>
