--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
                     <!-- Scrollable page content -->
                     <div class="page-content">
                         <div class="content-block">
-                            <h4>Description :</h4>
+                            <h4>Description</h4>
                             <p>1. We have displayed the google map image.</p>
                             <p>2. We have also added bubble for location bangor university using latitude and longitude (53.22921909999999,-4.129498000000012) in google map image.</p>
                             <p>3. If user click the image, its open default map app and show bubble in bangor university.</p>
