--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
                             <p>2. We have also added bubble for location bangor university using latitude and longitude (53.22921909999999,-4.129498000000012) in google map image.</p>
                             <p>3. If user click the image, its open default map app and show bubble in bangor university.</p>
                             <p>4. Suppose, if user uninstall the default map app, its tell user to restore the default map.</p>
-                            <p>5. If user cancell the restore option, then nothing happen in app. </p>
+                            <p>5. If user cancel the restore option, then nothing happen in app. </p>
                             <!-- <h4>Simple Map</h4> -->
                             <a href="javascript:void(0)" id="test" lat="13.0408454" lng="80.2346172">
                                 <img src="https://maps.googleapis.com/maps/api/staticmap?center=53.22921909999999,-4.129498000000012&zoom=15&scale=1&size=300x300&markers=color:blue%7Clabel:A%7C53.22921909999999,-4.129498000000012" /></a>
